--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,24 @@
 # Operating System Files
-
 *.DS_Store
 Thumbs.db
 
 # Build Files #
-
 bin
 target
 build/
 .gradle
 
 # Eclipse Project Files #
-
 .classpath
 .project
 .settings
 .springBeans
 
 # IntelliJ IDEA Files #
-
 *.iml
 *.ipr
 *.iws
 *.idea
 
+# Test files
+*.jdbc
