--- a/hibernate5/src/main/resources/application.properties
+++ b/hibernate5/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.banner-mode=off
 
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+logging.level.org.hibernate.type.descriptor.sql.BasicExtractor=trace
+
 #spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate-test
 #spring.datasource.username=hibernate-test
 #spring.datasource.password=hibernate-test
