--- a/hibernate6/src/main/resources/application.properties
+++ b/hibernate6/src/main/resources/application.properties
@@ -2,6 +2,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.banner-mode=off
 
+logging.level.sql=DEBUG
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+logging.level.org.hibernate.orm.jdbc.extract=TRACE
+
 #spring.datasource.url=jdbc:postgresql://localhost:5432/hibernate-test
 #spring.datasource.username=hibernate-test
 #spring.datasource.password=hibernate-test
